[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Images/EpisodeSelection/multidão_do_darcy.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Images/icons/previous.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/icons/next.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Menu/Padrão3.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/Menu/Padrão2.png" type="Texture" id=6]
[ext_resource path="res://assets/Images/Menu/Padrão1.png" type="Texture" id=7]
[ext_resource path="res://scenes/GUI/EpisodeSelection.gd" type="Script" id=8]
[ext_resource path="res://assets/Images/EpisodeSelection/cadeado.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.945098, 0.933333, 0.905882, 0 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.4, 0.631373, 0.862745, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=14]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.972549, 0.882353, 0.435294, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.4, 0.631373, 0.862745, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="EpisodeSelection" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="BackGround" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 575.0
color = Color( 0.945098, 0.933333, 0.905882, 1 )

[node name="Padrão1" type="Sprite" parent="."]
position = Vector2( 889, 373 )
scale = Vector2( 0.275947, 0.275947 )
texture = ExtResource( 7 )

[node name="Padrão2" type="Sprite" parent="."]
position = Vector2( 109, 125 )
scale = Vector2( 0.261364, 0.261364 )
texture = ExtResource( 6 )

[node name="Padrão3" type="Sprite" parent="."]
position = Vector2( 188, 423 )
scale = Vector2( 0.285606, 0.285606 )
texture = ExtResource( 5 )

[node name="Level1" type="Sprite" parent="."]
position = Vector2( 508, 286 )
scale = Vector2( 0.259089, 0.259089 )
texture = ExtResource( 1 )

[node name="Level2" type="Sprite" parent="."]
visible = false
position = Vector2( 508, 286 )
scale = Vector2( 0.259089, 0.259089 )

[node name="Level3" type="Sprite" parent="."]
visible = false
position = Vector2( 508, 286 )
scale = Vector2( 0.259089, 0.259089 )

[node name="LockedColor" type="ColorRect" parent="."]
visible = false
margin_left = 92.0
margin_top = 90.0
margin_right = 923.0
margin_bottom = 481.0
color = Color( 0, 0, 0, 0.584314 )

[node name="PlayableColor" type="ColorRect" parent="."]
margin_left = 92.0
margin_top = 90.0
margin_right = 925.0
margin_bottom = 481.0
color = Color( 0.670588, 0.670588, 0.670588, 0.329412 )

[node name="BorderPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -423.0
margin_top = -202.0
margin_right = 416.0
margin_bottom = 197.0
custom_styles/panel = SubResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 24.0
margin_right = 137.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.0235294, 0.0313726, 0.109804, 1 )
custom_fonts/font = SubResource( 12 )
text = "Seleção de episódios"
align = 1

[node name="Level1Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -18.0
margin_right = 166.5
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Levante da turma da boa vontade"
align = 1

[node name="Level2Text" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -18.0
margin_right = 166.5
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Level2"
align = 1

[node name="Level3Text" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.5
margin_top = -18.0
margin_right = 166.5
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Level3"
align = 1

[node name="Padlock" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 272 )
scale = Vector2( 0.259089, 0.259089 )
texture = ExtResource( 9 )

[node name="ButtonNext" type="Button" parent="."]
margin_left = 881.0
margin_top = 245.0
margin_right = 921.0
margin_bottom = 334.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 4 )

[node name="ButtonBack" type="Button" parent="."]
margin_left = 100.0
margin_top = 239.0
margin_right = 135.0
margin_bottom = 337.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 3 )

[node name="SelectLevelButton" type="TextureButton" parent="."]
margin_left = 151.0
margin_top = 91.0
margin_right = 865.0
margin_bottom = 480.0

[node name="OurButton" type="Button" parent="."]
margin_left = 838.0
margin_top = 502.0
margin_right = 927.0
margin_bottom = 544.0
custom_colors/font_color = Color( 0.0235294, 0.0313726, 0.109804, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
text = "Sair"

[connection signal="pressed" from="ButtonNext" to="." method="next_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="back_pressed"]
[connection signal="pressed" from="SelectLevelButton" to="." method="select_level"]
[connection signal="pressed" from="OurButton" to="." method="back_menu"]
